--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
             <ul class="list">
                 <!-- Адрес -->
                 <li>
-                    <a class="address-d list">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a href class="address-d list">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <!-- Ссылка на адрес электронной почты -->
                 <li>
